--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     <script src="https://kit.fontawesome.com/73bdb97465.js" crossorigin="anonymous"></script>
 
     <!-- Barlow font -->
-    <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@300;400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@400;600;700;800&display=swap"
+        rel="stylesheet">
     <!-- Mine css -->
     <link rel="stylesheet" href="css/style.css">
 
@@ -26,19 +27,22 @@
 </head>
 
 <body>
-    <header>
-        <div class="logo">
-            <a href="/">
-                <img src="img/logo.png" class="img-fluid" alt="">
-            </a>
+    <header id="large-screens" class="d-none d-lg-block">
+        <div class="overlay">
+            <div class="logo">
+                <a href="/">
+                    <img src="img/logo.png" class="img-fluid" alt="">
+                </a>
+            </div>
+            <div class="menu-bar">
+                <a href="">
+                    <img src="img/tiles.png" width="25px" alt="">
+                    <img src="img/close.png" width="20px" alt="" class="d-none">
+                </a>
+            </div>
         </div>
-        <div class="menu-bar">
-            <a href="">
-                <img src="img/tiles.png" width="25px" alt="">
-            </a>
-        </div>
-        <nav style="display: none;">
-            <ul>
+        <nav>
+            <ul class="menu">
                 <li><a href="" class="active"><span>BAŞ SƏHİFƏ</span></a></li>
                 <li><a href=""><span>ŞİRKƏT</span></a></li>
                 <li><a href=""><span>XİMƏDTLƏRİMİZ</span></a></li>
@@ -46,10 +50,100 @@
                 <li><a href=""><span>PORTFOLİO</span></a></li>
                 <li><a href=""><span>ƏLAQƏ</span></a></li>
             </ul>
+            <ul class="social-icons">
+                <li><a href="">In.</a></li>
+                <li><a href="">Fb.</a></li>
+                <li><a href="">Tw.</a></li>
+            </ul>
         </nav>
     </header>
+    <header id="small-screens" class="d-block d-lg-none">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-5 menu-bar">
+                    <a href="">
+                        <img src="img/tiles.png" width="25px" alt="">
+                        <img src="img/close.png" width="25px" alt="" class="d-none">
+                    </a>
+                </div>
+                <div class="col-7 logo pl-0">
+                    <a href="/">
+                        <img src="img/logo.png" class="img-fluid" alt="">
+                    </a>
+                </div>
+                <div class="col-12">
+                    <nav style="display: none;">
+                        <ul class="menu">
+                            <li><a href="" class="active"><span>BAŞ SƏHİFƏ</span></a></li>
+                            <li><a href=""><span>ŞİRKƏT</span></a></li>
+                            <li><a href=""><span>XİMƏDTLƏRİMİZ</span></a></li>
+                            <li><a href=""><span>MÜŞTƏRİLƏR</span></a></li>
+                            <li><a href=""><span>PORTFOLİO</span></a></li>
+                            <li><a href=""><span>ƏLAQƏ</span></a></li>
+                        </ul>
+                        <ul class="social-icons mt-3">
+                            <li><a href="">In.</a></li>
+                            <li><a href="">Fb.</a></li>
+                            <li><a href="">Tw.</a></li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+        </div>
+    </header>
     <section id="mainPageContent">
-
+        <div class="owl-carousel">
+            <div class="item-wrapper">
+                <div class="custom-items" style="background-image: url(img/item5.jpg);"></div>
+                <div class="overlay">
+                    <div class="content">
+                        <h1>LOREM IPSUM</h1>
+                        <p>Lorem ipsum dolor sit amet, con sectetuer adipism cing elit, sedi</p>
+                        <a href="">LOREM IPSUM</a>
+                    </div>
+                </div>
+            </div>
+            <div class="item-wrapper">
+                <div class="custom-items" style="background-image: url(img/item2.jpg);"></div>
+                <div class="overlay">
+                    <div class="content">
+                        <h1>LOREM IPSUM</h1>
+                        <p>Lorem ipsum dolor sit amet, con sectetuer adipism cing elit, sedi</p>
+                        <a href="">LOREM IPSUM</a>
+                    </div>
+                </div>
+            </div>
+            <div class="item-wrapper">
+                <div class="custom-items" style="background-image: url(img/item1.jpg);"></div>
+                <div class="overlay">
+                    <div class="content">
+                        <h1>LOREM IPSUM</h1>
+                        <p>Lorem ipsum dolor sit amet, con sectetuer adipism cing elit, sedi</p>
+                        <a href="">LOREM IPSUM</a>
+                    </div>
+                </div>
+            </div>
+            <div class="item-wrapper">
+                <div class="custom-items" style="background-image: url(img/item4.jpg);"></div>
+                <div class="overlay">
+                    <div class="content">
+                        <h1>LOREM IPSUM</h1>
+                        <p>Lorem ipsum dolor sit amet, con sectetuer adipism cing elit, sedi</p>
+                        <a href="">LOREM IPSUM</a>
+                    </div>
+                </div>
+            </div>
+            <div class="item-wrapper">
+                <div class="custom-items" style="background-image: url(img/item3.jpg);"></div>
+                <div class="overlay">
+                    <div class="content">
+                        <h1>LOREM IPSUM</h1>
+                        <p>Lorem ipsum dolor sit amet, con sectetuer adipism cing elit, sedi</p>
+                        <a href="">LOREM IPSUM</a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -62,6 +156,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
         integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
         crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <!-- owlCarousel -->
     <script src="owlCarousel/owl.carousel.min.js"></script>
     <!-- Mine js -->
